--- a/app/views/partners/dashboard/_chart2.html.erb
+++ b/app/views/partners/dashboard/_chart2.html.erb
@@ -1,12 +1,14 @@
 <div class="card mb-12">
   <div class="card-header">
-      <h4><i class="fa fa-line-chart" aria-hidden="true"></i> 过去30天冠军</h4>
+      <h4><i class="fa fa-line-chart" aria-hidden="true"></i> <%= t('partner.dashboard.chart2.title') %></h4>
   </div>
   <div class="card-body">
-    <div class="well profile_view">
+    <div class="well profile_view card-shadow">
       <div class="col-sm-12">
         <div class="left col-xs-7">
-            <h4 id="kol_30_winner_name">No Person</h4>
+            <h4 id="kol_30_winner_name">
+                <%= t('partner.dashboard.error.msg') %>
+            </h4>
             <h3 class="text-success">
                 <i class="fa fa-jpy" aria-hidden="true"></i> <span id="cur_30_winner_price">0</span>
             </h3>
@@ -15,11 +17,6 @@
         <div class="right col-xs-5 text-center">
             <%= image_tag("partners/user.png", alt: "", id: "avatar_url30", class: "img-circle img-responsive") %>
             <br />
-        </div>
-      </div>
-      <div class="col-xs-12 bottom text-center">
-        <div class="col-xs-12 col-sm-12 emphasis">
-            <div class="card-footer small text-muted" >最后更新 <span id="lastupdate2"></span></div>
         </div>
       </div>
     </div>
@@ -38,6 +35,9 @@
         this.src = imgSrc2;
       });
       $('#lastupdate2').text(moment().subtract(1, 'days').hour(1).minute(59).format("LLL"));
+    })
+    .fail(function(){
+      console.log('error in ')
     });
   });
 </script>
