--- a/app/views/partners/dashboard/_chart4.html.erb
+++ b/app/views/partners/dashboard/_chart4.html.erb
@@ -1,15 +1,33 @@
 <div class="card mb-12">
   <div class="card-header">
-    <i class="fa fa-line-chart"></i> 用户增长数
+    
   </div>
   <div class="card-body">
-    <div class="row">
-      <div class="col-sm-9 col-lg-9 col-md-9">
-        <canvas id="chart4" width="50" height="50"></canvas>
-      </div>
+      <div class="well profile_view card-shadow">
+          <div class="row">
+              <span class="col-sm-8">
+                <i class="fa fa-line-chart"></i> <%= t('partner.dashboard.chart4.title') %>
+              </span>
+              <span class="col-sm-4">
+                  <select class="form-control" style="">
+                      <option>1</option>
+                  </select>
+              </span>
+          </div>
+        
+        <div class="col-sm-12">
+          <canvas class="hide" id="chart4" width="100%" height="40"></canvas>
+          <div class="no-data-found" id="not-found4">
+            <div>
+              <i class="fa fa-exclamation-circle" aria-hidden="true"></i> <%= t('partner.dashboard.error.msg') %>
+            </div>
+        </div>
+        </div>
+        <br />
+        
     </div>
+    
   </div>
-    <div class="card-footer small text-muted" >最后更新 <span id="lastupdate4"></span></div>
 </div>
 
 
@@ -19,29 +37,58 @@
     var chartJson = 
     $.ajax({url: "/partners/dashboard/chart4.json"})
     .done(function(chartJson){
-      var ctx = document.getElementById("chart4");
-      
+      if(Object.keys(chartJson).length < 1){
+        dataIsFound(false, 7);
+        return;
+      }
+      var ctx = $("#chart4");
+      //var fillPattern = ctx.createPattern(img, 'repeat');
       var data = {
-            labels: Object.keys(chartJson),
-            datasets: [
-              {
-                label: "用户增长数",
-                fillColor: "rgba(220,220,220,0.5)",
-                strokeColor: "rgba(220,220,220,0.8)",
-                highlightFill: "rgba(220,220,220,0.75)",
-                highlightStroke: "rgba(220,220,220,1)",
-                data: Object.values(chartJson)
-              }
-            
-            ]
-            };
-      var myLineChart = new Chart(ctx, {
+        labels: Object.keys(chartJson),
+        lineColor:"red",
+        datasets: [
+          {
+            label: "用户增长数",
+            data: Object.values(chartJson),
+            fill: false,
+            borderColor: "rgba(2,117,216,1)",
+            pointRadius: 5,
+            pointBackgroundColor: "rgba(2,117,216,1)",
+            pointBorderColor: "rgba(255,255,255,0.8)",
+            pointHoverRadius: 5,
+            pointHoverBackgroundColor: "rgba(2,117,216,1)",
+            pointHitRadius: 20,
+            pointBorderWidth: 2
+          }
+          
+        ]
+      };
+      var myLineChart = new Chart(ctx.get(0), {
         type: 'line',
-        data: data
+        data: data,
+        options: {
+          scales: {
+            xAxes: [{
+
+              gridLines: {
+                display: false
+              },
+            }],
+            yAxes: [{
+              gridLines: {
+                display: false
+              }
+            }],
+          },
+          legend: {
+            display: false
+          }
+        }
       });
-      
-      
-      $('#lastupdate4').text(moment().subtract(1, 'days').hour(23).minute(59).format("LLL"));
+      dataIsFound(true, 4);
+    })
+    .fail(function(){
+      dataIsFound(false, 4);
     });
     
     console.log(chartJson);
