--- a/app/views/partners/dashboard/_chart7.html.erb
+++ b/app/views/partners/dashboard/_chart7.html.erb
@@ -1,83 +1,94 @@
-<div style="border: 1px solid #eee" class="card mb-12">
-  <div class="card-header text-center">
-    <i class="fa fa-bar-chart"></i> <%= t('partner.dashboard.chart7.title') %>
+<div class="card mb-12">
+  <div class="text-center card-header">
+    
   </div>
   <div class="card-body">
-    <div class="row">
-      <div class="col-sm-12 my-auto">
-        <canvas id="chart7" width="100" height="100"></canvas>
-      </div>
+      <div class="well profile_view card-shadow">
+          <div class="row">
+              <span class="col-sm-8">
+                <i class="fa fa-line-chart"></i> <%= t('partner.dashboard.chart7.title') %>
+              </span>
+              <span class="col-sm-4">
+                  <select class="form-control" style="">
+                      <option>1</option>
+                  </select>
+              </span>
+          </div>
+        
+        <div class="col-sm-12">
+          <canvas class="hide" id="chart7" width="100" height="100"></canvas>
+          <div class="no-data-found" id="not-found7">
+            <div>
+              <i class="fa fa-exclamation-circle" aria-hidden="true"></i> <%= t('partner.dashboard.error.msg') %>
+            </div>
+        </div>
+        </div>
+        <br />
+        
     </div>
+    
   </div>
-  <div class="card-footer small text-muted"></div>
 </div>
 
 <script type="text/javascript">
   $(document).ready(function () {
 
-    var chartJson = $.ajax({url: "/partners/dashboard/chart7.json", async: true}).done(function() {
+    var chartJson = $.ajax({url: "/partners/dashboard/chart7.json", async: true})
+    .done(function() {
+      
+      var array = JSON.parse(chartJson.responseText);
 
-    console.log(chartJson.responseText);
-    //  alert(chartJson.responseText);
-
-    var array = JSON.parse(chartJson.responseText);
-    //  alert("array " +array);
-
-    var chartlabels = array.labels;
-    //   alert("xxx" + labels);
-    console.log(chartlabels);
-    var chartData = array.data;
-    var ctx = document.getElementById("chart7");
-    // alert("chart6" + ctx);
-    var myLineChart = new Chart(ctx, {
-      //   type: 'bar',
-      type: 'horizontalBar',
-      data: {
-        labels: chartlabels, //["January", "February", "March", "April", "May"],
-        datasets: [{
-          label: "Tags Distribution",
-          //   backgroundColor: "rgba(2,117,216,1)",
-          backgroundColor: [
-            'rgba(255, 99, 132, 0.2)',
-            'rgba(54, 162, 235, 0.2)',
-            'rgba(255, 206, 86, 0.2)',
-            'rgba(153, 102, 255, 0.2)',
-            'rgba(255, 159, 64, 0.2)'
-          ],
-          borderColor: "rgba(2,117,216,1)",
-          data: chartData, //[4215, 5312, 6251, 7841, 9821],
-        }],
-      },
-      options: {
-        scales: {
-          xAxes: [{
-            time: {
-              unit: 'dollar'
-            },
-            gridLines: {
-              display: false
-            }
-            // ticks: {
-            //   max: 100,
-            //   maxTicksLimit: 6
-            // }
-          }],
-          yAxes: [{
-            // ticks: {
-            //   min: 0,
-            //   max: 15000,
-            //   maxTicksLimit: 5
-            // },
-            gridLines: {
-              display: false
-            }
+      var chartlabels = array.labels;
+      
+      var chartData = array.data;
+      if(chartData.length < 1){
+        dataIsFound(false, 7);
+        return;
+      }
+      var ctx = document.getElementById("chart7");
+      
+      var myLineChart = new Chart(ctx, {
+        type: 'horizontalBar',
+        data: {
+          labels: chartlabels, 
+          datasets: [{
+            label: "Tags Distribution",
+            backgroundColor: [
+              'rgba(255, 99, 132, 0.2)',
+              'rgba(54, 162, 235, 0.2)',
+              'rgba(255, 206, 86, 0.2)',
+              'rgba(153, 102, 255, 0.2)',
+              'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: "rgba(2,117,216,1)",
+            data: chartData, 
           }],
         },
-        legend: {
-          display: false
+        options: {
+          scales: {
+            xAxes: [{
+              time: {
+                unit: 'dollar'
+              },
+              gridLines: {
+                display: false
+              }
+            }],
+            yAxes: [{
+              gridLines: {
+                display: false
+              }
+            }],
+          },
+          legend: {
+            display: false
+          }
         }
-      }
-    });
+      });
+      dataIsFound(true, 7);
+    })
+    .fail(function(){
+      dataIsFound(false, 7);
     });
 
   });
