--- a/app/views/partners/dashboard/_chart1.html.erb
+++ b/app/views/partners/dashboard/_chart1.html.erb
@@ -1,22 +1,36 @@
 <div class="card mb-12">
   <div class="card-header">
-      <h4><i class="fa fa-line-chart" aria-hidden="true"></i> <%= t('partner.dashboard.chart1.title') %></h4>
   </div>
   <div class="card-body">
     <div class="well profile_view card-shadow">
       <div class="col-sm-12">
-        <div class="left col-xs-7">
+        <div class=" col-xs-12 text-center">
+          <%= image_tag("partners/user.png", alt: "", id: "avatar_url7", class: "img-circle img-responsive profile-img-max") %>
+          <br />
+        </div>
+        <div class=" col-xs-12 text-center">
             <h4 id="kol_winner_name">
               <%= t('partner.dashboard.error.msg') %>
             </h4>
-            <h3 class="text-success">
-                <i class="fa fa-jpy" aria-hidden="true"></i> <span id="cur_winner_price">0</span>
-            </h3>
+            <div class="btn btn-champions color1">
+              <%= t('partner.dashboard.chart1.champion') %>
+            </div>
+            <br />
+            <br />
             <br />
         </div>
-        <div class="right col-xs-5 text-center">
-            <%= image_tag("partners/user.png", alt: "", id: "avatar_url7", class: "img-circle img-responsive") %>
-            <br />
+      </div>
+      <div class="col-sm-12 card-bottom text-center">
+        <div class="col-xs-12 col-sm-12 ">
+            <div class="card-footer small " >
+                <h3 class="">
+                    <i class="fa fa-jpy" aria-hidden="true"></i> <span id="cur_winner_price">0</span>
+                </h3>
+                <h4 class="text-muted">
+                  <%= t('partner.dashboard.chart1.title') %>
+                </h4>
+                
+            </div>
         </div>
       </div>
     </div>
@@ -30,8 +44,8 @@
     var chartJson = 
     $.ajax({url: "/partners/dashboard/chart1.json"})
     .done(function(chartJson){
-      $("#cur_winner_price").text(chartJson.record.day_of_income);
-      $("#kol_winner_name").text(chartJson.kol.name);
+      $("#cur_winner_price").text(chartJson.record.day_of_income.toFixed(2).replace(/(\d)(?=(\d{3})+\.)/g, '$1,'));
+      $("#kol_winner_name").text(chartJson.kol);
       $("#avatar_url7").attr('src', chartJson.avatar_url).on("error", function(){
         this.src = imgSrc1;
       });
