--- a/app/views/partners/dashboard/_chart5.html.erb
+++ b/app/views/partners/dashboard/_chart5.html.erb
@@ -6,10 +6,10 @@
       <div class="well profile_view card-shadow">
           <div class="row">
               <span class="col-sm-8">
-                <i class="fa fa-line-chart"></i> <%= t('partner.dashboard.chart5.title') %>
+                <%= t('partner.dashboard.chart5.title') %>
               </span>
               <span class="col-sm-4">
-                  <select class="form-control" style="">
+                  <select class="form-control hide" style="">
                       <option>1</option>
                   </select>
               </span>
@@ -50,10 +50,10 @@
       var ctx = document.getElementById("chart5");
         var gradient = ctx.getContext('2d').createLinearGradient(0, 0, 0, 200);
 
-        gradient.addColorStop(0, 'rgba(2,117,216,0.6)');
-        gradient.addColorStop(0.2, 'rgba(2,117,216,0.4)');
-        gradient.addColorStop(0.5, 'rgba(2,117,216,0.2)');
-        gradient.addColorStop(1, 'rgba(2,117,216,0.05)');
+        gradient.addColorStop(0, 'rgba(2,117,216,0.4)');
+        gradient.addColorStop(0.2, 'rgba(2,117,216,0.3)');
+        gradient.addColorStop(0.5, 'rgba(2,117,216,0.1)');
+        gradient.addColorStop(1, 'rgba(2,117,216,0.0)');
 
       var data = {
         labels: chartlabels,
@@ -61,13 +61,14 @@
           {
             label: "# of Activities",
             backgroundColor: gradient,
-            borderColor:"rgba(2,117,216,1)",
-            pointRadius:5,
-            pointBackgroundColor:"rgba(2,117,216,1)",
-            pointBorderColor:"rgba(255,255,255,0.8)",
-            pointHoverRadius:5,
-            pointHoverBackgroundColor:"rgba(2,117,216,1)",
-            pointHitRadius:20,pointBorderWidth:2,
+            borderColor: "rgba(44,101,255,1)",
+            pointRadius: 5,
+            pointBackgroundColor: "rgba(255,255,255,1)",
+            pointBorderColor: "rgba(44,101,255,0.8)",
+            pointHoverRadius: 5,
+            pointHoverBackgroundColor: "rgba(44,101,255,1)",
+            pointHitRadius: 20,
+            pointBorderWidth: 2,
             data: chartData
           }
         ]
