--- a/app/views/partners/dashboard/_chart8.html.erb
+++ b/app/views/partners/dashboard/_chart8.html.erb
@@ -5,13 +5,8 @@
   <div class="card-body">
       <div class="well profile_view card-shadow">
           <div class="row">
-              <span class="col-sm-8">
-                <i class="fa fa-line-chart"></i> <%= t('partner.dashboard.chart8.title') %>
-              </span>
-              <span class="col-sm-4">
-                  <select class="form-control" style="">
-                      <option>1</option>
-                  </select>
+              <span class="col-sm-12 text-center">
+                <%= t('partner.dashboard.chart8.title') %>
               </span>
           </div>
         
@@ -46,41 +41,47 @@
       
       var ctx = $("#chart8");
       var myLineChart = new Chart(ctx.get(0), {
-        type: 'horizontalBar',
+        type: 'pie',
         data: {
           labels: chartlabels,
           datasets: [{
             label: "用户标签统计",
             backgroundColor: [
-              'rgba(0, 93, 255, 0.8)',
-              'rgba(208, 53, 69, 0.8)',
-              'rgba(255, 193, 7, 0.8)',
-              'rgba(40, 107, 69, 0.8)',
-              'rgba(0, 159, 255, 0.8)'
+              'rgba(147, 116, 255, 1)',
+              'rgba(69, 119, 255, 1)',
+              'rgba(76, 156, 255, 1)',
+              'rgba(82, 224, 255, 1)',
+              'rgba(123, 240, 211, 1)',
+              'rgba(255, 191, 12, 1)',
+              'rgba(255, 140, 88, 1)'
             ],
-
-            borderColor: "rgba(2,117,216,1)",
             data: chartData, 
           }],
         },
         options: {
-
-          scales: {
-            xAxes: [{
-
-              gridLines: {
-                display: false
-              },
-            }],
-            yAxes: [{
-              gridLines: {
-                display: false
-              }
-            }],
+          tooltips:{
+            callbacks:{
+              mode: 'single',
+              label: function(tooltipItem, data) {
+                    var label = data.labels[tooltipItem.index] || '';
+                    var value = data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index] || '';
+                    
+                    if (label) {
+                        label += ': '+Number(value).toFixed(2)+'%';
+                    }
+                    return label;
+                }
+            }
           },
           legend: {
-            display: false
-          }
+            display: true,
+            labels: {
+              usePointStyle: true
+            },
+            position: 'bottom',
+            
+          },
+          
         }
       });
       dataIsFound(true, 8);
