--- a/app/views/partners/dashboard/index.html.erb
+++ b/app/views/partners/dashboard/index.html.erb
@@ -8,37 +8,40 @@
   }
 
 </style>
-<h3><%= @admintag.tag %>  KOL 收益榜</h3>
 <div class="row">
+    
+  <h3 style="padding-left: 15px;"><%= @admintag.tag %>  KOL 收益榜</h3>
+  <br />
   <div class="col-md-4">
-    <%= render :partial => "partners/dashboard/chart1" %>
+    <%= render partial:  "partners/dashboard/chart1" %>
   </div>
   <div class="col-md-4">
-    <%= render :partial => "partners/dashboard/chart2" %>
+    <%= render partial: "partners/dashboard/chart2" %>
   </div>
   <div class="col-md-4">
-    <%= render :partial => "partners/dashboard/chart3" %>
+    <%= render partial: "partners/dashboard/chart3" %>
   </div>
 </div>
-<h3><%= @admintag.tag %> 数据统计</h3>
 <div class="row">
+  <h3 style="padding-left: 15px;"><%= @admintag.tag %> 数据统计</h3>
+  <br />
   <div class="col-md-6">
-    <%= render :partial => "partners/dashboard/chart4" %>
+    <%= render partial: "partners/dashboard/chart4" %>
   </div>
 
   <div class="col-md-6">
-    <%= render :partial => "partners/dashboard/chart5" %>
+    <%= render partial: "partners/dashboard/chart5" %>
   </div>
 </div>
 <div class="row">
   <div class="col-md-4">
-    <%= render :partial => "partners/dashboard/chart6" %>
+    <%= render partial: "partners/dashboard/chart6" %>
   </div>
   <div class="col-md-4">
-    <%= render :partial => "partners/dashboard/chart7" %>
+    <%= render partial: "partners/dashboard/chart7" %>
   </div>
   <div class="col-md-4">
-    <%= render :partial => "partners/dashboard/chart8" %>
+    <%= render partial: "partners/dashboard/chart8" %>
   </div>
 </div>
 <script>
