--- a/app/assets/stylesheets/partners.scss
+++ b/app/assets/stylesheets/partners.scss
@@ -52,7 +52,7 @@ td {
 }
 /* For Login Page */
 .login-bg{
-    background: url($bg_img) no-repeat center center fixed;
+    background: $bg_img no-repeat center center fixed;
     webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -118,7 +118,7 @@ td {
 }
 
 .login-dialog-box-bg{
-    background: url($bg_img) no-repeat center center fixed;
+    background: $bg_img no-repeat center center fixed;
     webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -151,6 +151,7 @@ td {
     bottom: 0;
     width: 100%;
     text-align: center;
+    color: rgba(255,255,255,0.7);
 }
 
 .version-txt{
@@ -159,8 +160,8 @@ td {
     bottom: 0;
     width: 100%;
     text-align: right;
-    font-size: 12px;
-    color: rgba(255,255,255,0.7);
+    font-size: 10px;
+    
 }
 /* For Login Page Ends */
 
