--- a/client/assets/stylesheets/recharge/summary.scss
+++ b/client/assets/stylesheets/recharge/summary.scss
@@ -79,7 +79,7 @@
         }
         td {
           vertical-align: middle !important;
-          white-space: nowrap;
+          // white-space: nowrap;
 
           div {
             width: 100%;
